Users configuration screen had no "unlock" or "add user" button if no users show up.
Detailed description of the issue. Put as much information as you can, potentially with images showing the issue.
Steps to reproduce:
- Have a system that displays no users in the GNOME settings users screen (see this bug for an example).
- Open GNOME Settings to the Users screen
- See that there is no way to add a new user.