user-accounts: Show add user button also if no users found

The add user button is not shown currently if no users are found
even if the panel is unlocked. Let's show the button to allow
user creation in this case.

Fixes: https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/988


(cherry picked from commit 1a38a971ec93bb6a36d57bea963dbf89b02e0877)